Added features for 12 and 13